--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,5 @@
 ---
+import HeaderButton from "./HeaderButton.astro";
 ---
 
 <header class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
@@ -10,7 +11,30 @@
   </div>
 
   <nav class="flex flex-col items-center justify-between w-full text-center md:flex-row">
-    <a class="text-white" href="">Últimos Lanzamientos</a>
-    <a class="text-white"href="">Los antiguos lanzamientos</a>
+    <HeaderButton class="text-white" href="">
+      <svg slot="before" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M4 13a8 8 0 0 1 7 7a6 6 0 0 0 3 -5a9 9 0 0 0 6 -8a3 3 0 0 0 -3 -3a9 9 0 0 0 -8 6a6 6 0 0 0 -5 3"></path>
+        <path d="M7 14a6 6 0 0 0 -3 6a6 6 0 0 0 6 -3"></path>
+        <path d="M15 9m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
+     </svg>
+      Últimos Lanzamientos</HeaderButton>
+    <HeaderButton class="text-white"href="">
+      <svg slot="before"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M10 6a3 3 0 1 0 -6 0v7h6v-7z"></path>
+        <path d="M14 13h6v-7a3 3 0 0 0 -6 0v7z"></path>
+        <path d="M5 16c0 2.333 .667 4 2 5c1.333 -1 2 -2.667 2 -5"></path>
+        <path d="M15 16c0 2.333 .667 4 2 5c1.333 -1 2 -2.667 2 -5"></path>
+        <path d="M10 8h4"></path>
+        <path d="M10 11h4"></path>
+     </svg>
+      Los antiguos lanzamientos</HeaderButton>
+    <HeaderButton class="text-white"href="/about">  
+      <svg slot="before" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M12 2c5.523 0 10 4.477 10 10a10 10 0 0 1 -19.995 .324l-.005 -.324l.004 -.28c.148 -5.393 4.566 -9.72 9.996 -9.72zm0 9h-1l-.117 .007a1 1 0 0 0 0 1.986l.117 .007v3l.007 .117a1 1 0 0 0 .876 .876l.117 .007h1l.117 -.007a1 1 0 0 0 .876 -.876l.007 -.117l-.007 -.117a1 1 0 0 0 -.764 -.857l-.112 -.02l-.117 -.006v-3l-.007 -.117a1 1 0 0 0 -.876 -.876l-.117 -.007zm.01 -3l-.127 .007a1 1 0 0 0 0 1.986l.117 .007l.127 -.007a1 1 0 0 0 0 -1.986l-.117 -.007z" stroke-width="0" fill="currentColor"></path>
+     </svg>
+      Sobre el proyecto</HeaderButton>
   </nav>
 </header>
