--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,8 @@
 ---
-import Header from '../components/Header.astro';
-import Layout from '../layouts/Layout.astro';
+import Launches from "../components/Launches.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="SpaceX  Launches">
-	<main>
-	<Header />
-	</main>
+  <Launches />
 </Layout>
-
