--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import HeaderButton from "./HeaderButton.astro";
       All the information about spaceX launches
     </p>
   </div>
-  <Counter client:visible transition:persist />
+  <!-- <Counter client:visible transition:persist /> -->
   <nav
     class="flex flex-col items-center justify-between w-full text-center md:flex-row"
   >
